Validation moved to service level, updated docker-compose