@@ -11,9 +11,15 @@ import com.kyriba.curriculum.domain.dto.CourseToAdd;
 import com.kyriba.curriculum.domain.dto.CourseToUpdate;
 import com.kyriba.curriculum.domain.dto.Curriculum;
 import com.kyriba.curriculum.domain.dto.CurriculumToCreate;
-import io.restassured.builder.RequestSpecBuilder;
-import io.restassured.specification.RequestSpecification;
-import org.junit.jupiter.api.AfterEach;
+import com.kyriba.curriculum.domain.dto.Subject;
+import com.kyriba.curriculum.service.CurriculumService;
+import com.kyriba.curriculum.service.exception.CourseAlreadyExistsException;
+import com.kyriba.curriculum.service.exception.CourseNotFoundException;
+import com.kyriba.curriculum.service.exception.CurriculumAlreadyExistsException;
+import com.kyriba.curriculum.service.exception.CurriculumNotFoundException;
+import com.kyriba.curriculum.service.exception.SubjectNotFoundException;
+import io.restassured.module.mockmvc.RestAssuredMockMvc;
+import io.restassured.module.mockmvc.config.RestAssuredMockMvcConfig;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DisplayNameGeneration;
@@ -23,58 +29,59 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.autoconfigure.restdocs.AutoConfigureRestDocs;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.RestDocumentationContextProvider;
 import org.springframework.restdocs.RestDocumentationExtension;
+import org.springframework.restdocs.mockmvc.MockMvcRestDocumentation;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import javax.validation.ConstraintViolationException;
+import javax.validation.ValidationException;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
 
-import static com.kyriba.curriculum.api.TestCurriculumService.CURRICULA;
-import static com.kyriba.curriculum.api.TestCurriculumService.DEFAULT_CURRICULA;
-import static io.restassured.RestAssured.given;
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static io.restassured.module.mockmvc.RestAssuredMockMvc.given;
+import static io.restassured.module.mockmvc.config.MockMvcConfig.mockMvcConfig;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.springframework.restdocs.restassured3.RestAssuredRestDocumentation.document;
-import static org.springframework.restdocs.restassured3.RestAssuredRestDocumentation.documentationConfiguration;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
+import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 
 
 /**
  * @author M-DBE
  */
 @ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 @ExtendWith(RestDocumentationExtension.class)
-@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
 @DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
+@AutoConfigureRestDocs
 class CurriculumControllerTest
 {
-  private RequestSpecification spec;
-  private List<Curriculum> prevCurricula;
+  @Mock
+  private CurriculumService curriculumService;
+  @InjectMocks
+  private CurriculumController curriculumController;
+
+  private RestAssuredMockMvcConfig config;
 
 
   @BeforeEach
   void before(RestDocumentationContextProvider restDocumentation)
   {
-    this.spec = new RequestSpecBuilder()
-        .addFilter(documentationConfiguration(restDocumentation))
-        .setBasePath("/api/v1")
-        .build();
-    prevCurricula = CURRICULA;
-    CURRICULA = DEFAULT_CURRICULA.get();
-  }
-
-
-  @AfterEach
-  void after()
-  {
-    CURRICULA = prevCurricula;
+    RestAssuredMockMvc.standaloneSetup(curriculumController, new ValidationExceptionHandler(),
+        new CustomExceptionHandler(), MockMvcRestDocumentation.documentationConfiguration(restDocumentation));
+    config = RestAssuredMockMvcConfig.config()
+        .mockMvcConfig(mockMvcConfig().automaticallyApplySpringRestDocsMockMvcSupport());
   }
 
 
@@ -85,12 +92,16 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_status_when_curriculum_not_found_for_id()
     {
-      given(spec)
-          .filter(document("get-curriculum-by-id-fail-not-found"))
-          .pathParam("id", 10)
+      long curriculumId = 10;
+      Mockito.when(curriculumService.getCurriculumById(eq(curriculumId)))
+          .thenThrow(new CurriculumNotFoundException(curriculumId));
+
+      given()
+          .config(config)
           .when()
-          .get("/curricula/{id}")
+          .get("/api/v1/curricula/{id}", curriculumId)
           .then()
+          .apply(document("get-curriculum-by-id-fail-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value());
     }
 
@@ -98,90 +109,87 @@ class CurriculumControllerTest
     @Test
     void should_return_full_curriculum_when_curriculum_exists_for_id()
     {
-      Curriculum curriculum = given(spec)
-          .filter(document("get-curriculum-by-id-success"))
-          .pathParam("id", 1)
+      long curriculumId = 1;
+      Curriculum curriculum = new Curriculum(curriculumId, 10, List.of());
+      Mockito.when(curriculumService.getCurriculumById(curriculumId)).thenReturn(curriculum);
+
+      Curriculum result = given()
+          .config(config)
+          .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .get("/curricula/{id}")
+          .get("/api/v1/curricula/{id}", 1)
           .then()
+          .apply(document("get-curriculum-by-id-success"))
           .statusCode(HttpStatus.OK.value())
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .extract().jsonPath().getObject(".", Curriculum.class);
 
-      assertNotNull(curriculum);
-      assertEquals(1, curriculum.getId());
-      assertEquals(11, curriculum.getGrade());
+      assertEquals(curriculum, result);
     }
   }
 
 
-  @Nested()
+  @Nested
   @DisplayName("Get curriculum by grade")
   class CurriculumGetByGrade
   {
     @Test
     void should_return_brief_curriculum_when_curriculum_exists_for_grade()
     {
-      List<BriefCurriculum> curricula = given(spec)
-          .filter(document("get-curriculum-by-grade-success"))
-          .queryParam("grade", 10)
+      Integer grade = 5;
+      Curriculum curriculum = new Curriculum(2, grade, List.of());
+      Mockito.when(curriculumService.findCurriculumByGrade(grade)).thenReturn(Optional.of(curriculum));
+
+      List<BriefCurriculum> curricula = given()
+          .config(config)
+          .queryParam("grade", grade)
           .when()
-          .get("/curricula")
+          .get("/api/v1/curricula")
           .then()
+          .apply(document("get-curriculum-by-grade-success"))
           .statusCode(HttpStatus.OK.value())
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .extract().jsonPath().getList(".", BriefCurriculum.class);
 
       assertNotNull(curricula);
       assertEquals(1, curricula.size());
-      assertEquals(2, curricula.get(0).getId());
-      assertEquals(10, curricula.get(0).getGrade());
+      assertEquals(curriculum.getId(), curricula.get(0).getId());
+      assertEquals(grade, curricula.get(0).getGrade());
     }
 
 
     @Test
-    void should_return_NOT_FOUND_status_when_curriculum_not_found_for_grade()
+    void should_return_NOT_IMPLEMENTED_status_when_curriculum_not_found_for_grade()
     {
-      given(spec)
-          .filter(document("get-curriculum-by-grade-fail-not-found"))
-          .queryParam("grade", 1)
+      Integer grade = 1;
+      Mockito.when(curriculumService.findCurriculumByGrade(grade)).thenReturn(Optional.empty());
+
+      given()
+          .config(config)
+          .queryParam("grade", grade)
           .when()
-          .get("/curricula")
+          .get("/api/v1/curricula")
           .then()
+          .apply(document("get-curriculum-by-grade-fail-not-found"))
           .statusCode(HttpStatus.NOT_IMPLEMENTED.value());
     }
 
 
     @ParameterizedTest
-    @ValueSource(ints = { -100, 0 })
-    void should_return_BAD_REQUEST_status_when_grade_is_less_than_1(int grade)
+    @ValueSource(classes = { ValidationException.class, ConstraintViolationException.class })
+    void should_return_BAD_REQUEST_status_when_validation_exception_is_thrown(Class<? extends Throwable> exception)
     {
-      String message = given(spec)
-          .filter(document("get-curriculum-by-grade-fail-grade-is-less-than-1"))
+      Integer grade = 1;
+      Mockito.when(curriculumService.findCurriculumByGrade(grade)).thenThrow(exception);
+
+      given()
+          .config(config)
           .queryParam("grade", grade)
           .when()
-          .get("/curricula")
+          .get("/api/v1/curricula")
           .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be greater than or equal to 1"));
-    }
-
-
-    @Test
-    void should_return_BAD_REQUEST_status_when_grade_is_greater_than_11()
-    {
-      String message = given(spec)
-          .filter(document("get-curriculum-by-grade-fail-grade-is-greater-than-11"))
-          .queryParam("grade", 100)
-          .when()
-          .get("/curricula")
-          .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be less than or equal to 11"));
+          .apply(document("get-curriculum-by-grade-fail-validation-exception"))
+          .statusCode(HttpStatus.BAD_REQUEST.value());
     }
   }
 
@@ -193,19 +201,20 @@ class CurriculumControllerTest
     @Test
     void should_return_all_curricula_in_brief()
     {
-      List<BriefCurriculum> curricula = given(spec)
-          .filter(document("get-all-curricula"))
+      List<BriefCurriculum> allCurricula = List.of(new BriefCurriculum(1, 1), new BriefCurriculum(2, 2));
+      Mockito.when(curriculumService.findAllCurricula()).thenReturn(allCurricula);
+
+      List<BriefCurriculum> result = given()
+          .config(config)
           .when()
-          .get("/curricula")
+          .get("/api/v1/curricula")
           .then()
+          .apply(document("get-all-curricula"))
           .statusCode(HttpStatus.OK.value())
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .extract().jsonPath().getList(".", BriefCurriculum.class);
 
-      assertNotNull(curricula);
-      assertEquals(new HashSet<>(Arrays.asList(10, 11)), new HashSet<>(curricula.stream()
-          .map(BriefCurriculum::getGrade)
-          .collect(Collectors.toSet())));
+      assertEquals(Set.copyOf(allCurricula), Set.copyOf(result));
     }
   }
 
@@ -217,67 +226,62 @@ class CurriculumControllerTest
     @Test
     void should_return_brief_curriculum_when_curriculum_for_grade_created_successfully()
     {
-      BriefCurriculum curriculum = given(spec)
-          .filter(document("create-curriculum-success"))
-          .body(new CurriculumToCreate(5))
+      CurriculumToCreate curriculumToCreate = new CurriculumToCreate(5);
+      BriefCurriculum createdCurriculum = new BriefCurriculum(1, curriculumToCreate.getGrade());
+      Mockito.when(curriculumService.createCurriculum(curriculumToCreate)).thenReturn(createdCurriculum);
+
+      BriefCurriculum result = given()
+          .config(config)
+          .body(curriculumToCreate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula")
+          .post("/api/v1/curricula")
           .then()
+          .apply(document("create-curriculum-success"))
           .statusCode(HttpStatus.CREATED.value())
           .extract().jsonPath().getObject(".", BriefCurriculum.class);
 
-      assertNotNull(curriculum);
-      assertEquals(5, curriculum.getGrade());
+      assertNotNull(result);
+      assertEquals(createdCurriculum, result);
     }
 
 
     @Test
     void should_return_CONFLICT_status_when_curriculum_for_grade_already_exists()
     {
-      given(spec)
-          .filter(document("create-curriculum-fail-already-exists"))
-          .body(new CurriculumToCreate(11))
+      CurriculumToCreate curriculumToCreate = new CurriculumToCreate(11);
+      Mockito.when(curriculumService.createCurriculum(curriculumToCreate))
+          .thenThrow(new CurriculumAlreadyExistsException(curriculumToCreate.getGrade()));
+
+      given()
+          .config(config)
+          .body(curriculumToCreate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula")
+          .post("/api/v1/curricula")
           .then()
+          .apply(document("create-curriculum-fail-already-exists"))
           .statusCode(HttpStatus.CONFLICT.value());
     }
 
 
     @ParameterizedTest
-    @ValueSource(ints = { -100, 0 })
-    void should_return_BAD_REQUEST_status_when_grade_is_less_than_1(int grade)
+    @ValueSource(classes = { ValidationException.class, ConstraintViolationException.class })
+    void should_return_BAD_REQUEST_status_when_validation_exception_is_thrown(Class<? extends Throwable> exception)
     {
-      String message = given(spec)
-          .filter(document("create-curriculum-fail-grade-is-less-than-1"))
-          .body(new CurriculumToCreate(grade))
+      CurriculumToCreate curriculumToCreate = new CurriculumToCreate(11);
+      Mockito.when(curriculumService.createCurriculum(curriculumToCreate))
+          .thenThrow(exception);
+
+      given()
+          .config(config)
+          .body(curriculumToCreate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula")
+          .post("/api/v1/curricula")
           .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be greater than or equal to 1"));
-    }
-
-
-    @Test
-    void should_return_BAD_REQUEST_status_when_grade_is_greater_than_11()
-    {
-      String message = given(spec)
-          .filter(document("create-curriculum-fail-grade-is-greater-than-11"))
-          .body(new CurriculumToCreate(100))
-          .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
-          .when()
-          .post("/curricula")
-          .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be less than or equal to 11"));
+          .apply(document("create-curriculum-fail-validation-exception"))
+          .statusCode(HttpStatus.BAD_REQUEST.value());
     }
   }
 
@@ -289,12 +293,15 @@ class CurriculumControllerTest
     @Test
     void should_return_nothing_when_curriculum_for_id_exists()
     {
-      given(spec)
-          .filter(document("remove-curriculum-success"))
-          .pathParam("id", 1)
+      long curriculumId = 1;
+      doNothing().when(curriculumService).removeCurriculum(curriculumId);
+
+      given()
+          .config(config)
           .when()
-          .delete("/curricula/{id}")
+          .delete("/api/v1/curricula/{id}", curriculumId)
           .then()
+          .apply(document("remove-curriculum-success"))
           .statusCode(HttpStatus.NO_CONTENT.value());
     }
 
@@ -302,12 +309,15 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_status_when_curriculum_for_id_not_found()
     {
-      given(spec)
-          .filter(document("remove-curriculum-fail-not-found"))
-          .pathParam("id", 10)
+      long curriculumId = 1;
+      doThrow(new CurriculumNotFoundException(curriculumId)).when(curriculumService).removeCurriculum(curriculumId);
+
+      given()
+          .config(config)
           .when()
-          .delete("/curricula/{id}")
+          .delete("/api/v1/curricula/{id}", curriculumId)
           .then()
+          .apply(document("remove-curriculum-fail-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value());
     }
   }
@@ -320,93 +330,114 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_with_message_when_curriculum_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("add-course-fail-curriculum-not-found"))
-          .pathParam("id", 11)
-          .body(new CourseToAdd(1003, 200))
+      long curriculumId = 1;
+      CourseToAdd courseToAdd = new CourseToAdd(2, 100);
+      Mockito.when(curriculumService.addCourse(curriculumId, courseToAdd))
+          .thenThrow(new CurriculumNotFoundException(curriculumId));
+
+      String message = given()
+          .config(config)
+          .body(courseToAdd)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula/{id}/courses")
+          .post("/api/v1/curricula/{id}/courses", curriculumId)
           .then()
+          .apply(document("add-course-fail-curriculum-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
-      assertEquals("Curriculum with id 11 not found.", message);
+      assertEquals("Curriculum with id 1 not found.", message);
     }
 
 
     @Test
     void should_return_NOT_FOUND_with_message_when_subject_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("add-course-fail-subject-not-found"))
-          .pathParam("id", 1)
-          .body(new CourseToAdd(1100, 200))
+      long curriculumId = 1;
+      CourseToAdd courseToAdd = new CourseToAdd(2, 100);
+      Mockito.when(curriculumService.addCourse(curriculumId, courseToAdd))
+          .thenThrow(new SubjectNotFoundException(courseToAdd.getSubjectId()));
+
+      String message = given()
+          .config(config)
+          .body(courseToAdd)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula/{id}/courses")
+          .post("/api/v1/curricula/{id}/courses", curriculumId)
           .then()
+          .apply(document("add-course-fail-subject-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
-      assertEquals("Subject with id 1100 not found.", message);
+      assertEquals("Subject with id 2 not found.", message);
     }
 
 
     @Test
     void should_return_CONFLICT_with_message_when_course_for_subject_already_exists()
     {
-      String message = given(spec)
-          .filter(document("add-course-fail-already-exists"))
-          .pathParam("id", 1)
-          .body(new CourseToAdd(1000, 200))
+      long curriculumId = 1;
+      CourseToAdd courseToAdd = new CourseToAdd(2, 100);
+      Mockito.when(curriculumService.addCourse(curriculumId, courseToAdd))
+          .thenThrow(new CourseAlreadyExistsException(curriculumId, courseToAdd.getSubjectId()));
+
+      String message = given()
+          .config(config)
+          .body(courseToAdd)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula/{id}/courses")
+          .post("/api/v1/curricula/{id}/courses", curriculumId)
           .then()
+          .apply(document("add-course-fail-already-exists"))
           .statusCode(HttpStatus.CONFLICT.value())
           .extract().response().asString();
 
-      assertEquals("Course for curriculum with id 1 and subject with id 1000 already exists.", message);
+      assertEquals("Course for curriculum with id 1 and subject with id 2 already exists.", message);
     }
 
 
     @Test
     void should_return_course_when_course_added_successfully()
     {
-      Course course = given(spec)
-          .filter(document("add-course-success"))
-          .pathParam("id", 1)
-          .body(new CourseToAdd(1003, 200))
+      long curriculumId = 1;
+      CourseToAdd courseToAdd = new CourseToAdd(2, 100);
+      Course course = new Course(10, new Subject(courseToAdd.getSubjectId(), "Algebra"), courseToAdd.getLessonCount());
+      Mockito.when(curriculumService.addCourse(curriculumId, courseToAdd))
+          .thenReturn(course);
+
+      Course result = given()
+          .config(config)
+          .body(courseToAdd)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula/{id}/courses")
+          .post("/api/v1/curricula/{id}/courses", curriculumId)
           .then()
+          .apply(document("add-course-success"))
           .statusCode(HttpStatus.CREATED.value())
           .extract().jsonPath().getObject(".", Course.class);
 
       assertNotNull(course);
-      assertEquals(1003, course.getSubject().getId());
-      assertEquals(200, course.getLessonCount());
+      assertEquals(course, result);
     }
 
 
     @ParameterizedTest
-    @ValueSource(ints = { -100, 0 })
-    void should_return_BAD_REQUEST_when_lessonCount_is_invalid(int lessonCount)
+    @ValueSource(classes = { ValidationException.class, ConstraintViolationException.class })
+    void should_return_BAD_REQUEST_when_validation_exception_is_thrown(Class<? extends Throwable> exception)
     {
-      String message = given(spec)
-          .filter(document("add-course-fail-lesson-count-is-invalid"))
-          .pathParam("id", 11)
-          .body(new CourseToAdd(1003, lessonCount))
+      long curriculumId = 1;
+      CourseToAdd courseToAdd = new CourseToAdd(2, 100);
+      Mockito.when(curriculumService.addCourse(curriculumId, courseToAdd)).thenThrow(exception);
+
+      given()
+          .config(config)
+          .body(courseToAdd)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .post("/curricula/{id}/courses")
+          .post("/api/v1/curricula/{id}/courses", curriculumId)
           .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be greater than 0"));
+          .apply(document("add-course-fail-validation-exception"))
+          .statusCode(HttpStatus.BAD_REQUEST.value());
     }
   }
 
@@ -418,15 +449,19 @@ class CurriculumControllerTest
     @Test
     void should_return_nothing_when_updated_successfully()
     {
-      given(spec)
-          .filter(document("update-course-replaced-success"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 100)
-          .body(new CourseToUpdate(1000, 300))
+      long curriculumId = 1;
+      long courseId = 100;
+      CourseToUpdate courseToUpdate = new CourseToUpdate(1000, 300);
+      doNothing().when(curriculumService).updateCourse(curriculumId, courseId, courseToUpdate);
+
+      given()
+          .config(config)
+          .body(courseToUpdate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .put("/curricula/{curriculumId}/courses/{courseId}")
+          .put("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("update-course-replaced-success"))
           .statusCode(HttpStatus.NO_CONTENT.value());
     }
 
@@ -434,35 +469,45 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_status_when_course_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("update-course-updated-fail-course-id-not-found"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 110)
-          .body(new CourseToUpdate(1003, 300))
+      long curriculumId = 1;
+      long courseId = 100;
+      CourseToUpdate courseToUpdate = new CourseToUpdate(1003, 300);
+      doThrow(new CourseNotFoundException(curriculumId, courseId)).when(curriculumService)
+          .updateCourse(curriculumId, courseId, courseToUpdate);
+
+      String message = given()
+          .config(config)
+          .body(courseToUpdate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .put("/curricula/{curriculumId}/courses/{courseId}")
+          .put("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("update-course-updated-fail-course-id-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
       assertNotNull(message);
-      assertEquals("Course with id 110 for curriculum with id 1 not found.", message);
+      assertEquals("Course with id 100 for curriculum with id 1 not found.", message);
     }
 
 
     @Test
     void should_return_CONFLICT_status_when_other_course_for_subject_exists()
     {
-      given(spec)
-          .filter(document("update-course-fail-other-for-subject-exists"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 100)
-          .body(new CourseToUpdate(1001, 300))
+      long curriculumId = 1;
+      long courseId = 100;
+      CourseToUpdate courseToUpdate = new CourseToUpdate(1003, 300);
+      doThrow(new CourseAlreadyExistsException(curriculumId, courseId)).when(curriculumService)
+          .updateCourse(curriculumId, courseId, courseToUpdate);
+
+      given()
+          .config(config)
+          .body(courseToUpdate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .put("/curricula/{curriculumId}/courses/{courseId}")
+          .put("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("update-course-fail-other-for-subject-exists"))
           .statusCode(HttpStatus.CONFLICT.value());
     }
 
@@ -470,39 +515,45 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_status_when_curriculum_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("update-course-fail-curriculum-not-found"))
-          .pathParam("curriculumId", 10)
-          .pathParam("courseId", 100)
-          .body(new CourseToUpdate(1000, 300))
+      long curriculumId = 1;
+      long courseId = 100;
+      CourseToUpdate courseToUpdate = new CourseToUpdate(1003, 300);
+      doThrow(new CurriculumNotFoundException(curriculumId)).when(curriculumService)
+          .updateCourse(curriculumId, courseId, courseToUpdate);
+
+      String message = given()
+          .config(config)
+          .body(courseToUpdate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .put("/curricula/{curriculumId}/courses/{courseId}")
+          .put("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("update-course-fail-curriculum-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
-      assertEquals("Curriculum with id 10 not found.", message);
+      assertEquals("Curriculum with id 1 not found.", message);
     }
 
 
     @ParameterizedTest
-    @ValueSource(ints = { -100, 0 })
-    void should_return_BAD_REQUEST_status_when_lessonCount_is_invalid(int lessonCount)
+    @ValueSource(classes = { ValidationException.class, ConstraintViolationException.class })
+    void should_return_BAD_REQUEST_status_when_validation_exception_is_thrown(Class<? extends Throwable> exception)
     {
-      String message = given(spec)
-          .filter(document("update-course-fail-lesson-count-is-invalid"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 125)
-          .body(new CourseToUpdate(1000, lessonCount))
+      long curriculumId = 1;
+      long courseId = 100;
+      CourseToUpdate courseToUpdate = new CourseToUpdate(1003, 300);
+      doThrow(exception).when(curriculumService).updateCourse(curriculumId, courseId, courseToUpdate);
+
+      given()
+          .config(config)
+          .body(courseToUpdate)
           .contentType(MediaType.APPLICATION_JSON_UTF8_VALUE)
           .when()
-          .put("/curricula/{curriculumId}/courses/{courseId}")
+          .put("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
-          .statusCode(HttpStatus.BAD_REQUEST.value())
-          .extract().response().asString();
-
-      assertThat(message, containsString("must be greater than 0"));
+          .apply(document("update-course-fail-curriculum-not-found"))
+          .statusCode(HttpStatus.BAD_REQUEST.value());
     }
   }
 
@@ -514,13 +565,16 @@ class CurriculumControllerTest
     @Test
     void should_return_nothing_when_removed_successfully()
     {
-      given(spec)
-          .filter(document("remove-course-success"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 100)
+      long curriculumId = 1;
+      long courseId = 100;
+      doNothing().when(curriculumService).removeCourse(curriculumId, courseId);
+
+      given()
+          .config(config)
           .when()
-          .delete("/curricula/{curriculumId}/courses/{courseId}")
+          .delete("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("remove-course-success"))
           .statusCode(HttpStatus.NO_CONTENT.value());
     }
 
@@ -528,34 +582,42 @@ class CurriculumControllerTest
     @Test
     void should_return_NOT_FOUND_status_with_message_when_curriculum_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("remove-course-curriculum-not-found"))
-          .pathParam("curriculumId", 10)
-          .pathParam("courseId", 100)
+      long curriculumId = 1;
+      long courseId = 100;
+      doThrow(new CurriculumNotFoundException(curriculumId)).when(curriculumService)
+          .removeCourse(curriculumId, courseId);
+
+      String message = given()
+          .config(config)
           .when()
-          .delete("/curricula/{curriculumId}/courses/{courseId}")
+          .delete("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("remove-course-curriculum-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
-      assertEquals("Curriculum with id 10 not found.", message);
+      assertEquals("Curriculum with id 1 not found.", message);
     }
 
 
     @Test
     void should_return_NOT_FOUND_status_with_message_when_course_for_id_not_found()
     {
-      String message = given(spec)
-          .filter(document("remove-course-curriculum-not-found"))
-          .pathParam("curriculumId", 1)
-          .pathParam("courseId", 125)
+      long curriculumId = 1;
+      long courseId = 100;
+      doThrow(new CourseNotFoundException(curriculumId, courseId)).when(curriculumService)
+          .removeCourse(curriculumId, courseId);
+
+      String message = given()
+          .config(config)
           .when()
-          .delete("/curricula/{curriculumId}/courses/{courseId}")
+          .delete("/api/v1/curricula/{curriculumId}/courses/{courseId}", curriculumId, courseId)
           .then()
+          .apply(document("remove-course-curriculum-not-found"))
           .statusCode(HttpStatus.NOT_FOUND.value())
           .extract().response().asString();
 
-      assertEquals("Course with id 125 for curriculum with id 1 not found.", message);
+      assertEquals("Course with id 100 for curriculum with id 1 not found.", message);
     }
   }
 }
